fixed little left/right colors not showing on keys

--- a/assets/styling/main.css
+++ b/assets/styling/main.css
@@ -26,7 +26,7 @@ background-color: rgb(0, 174, 255);
 .ring_right{
 background-color: rgb(232, 124, 232);
 }
-.little_left & .little_right{
+.little_left {
 background-color: rgb(226, 31, 226);
 }
 #space{
